--- a/HelloWorldAspNetCore/Properties/launchSettings.json
+++ b/HelloWorldAspNetCore/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50816/",
+      "applicationUrl": "https://localhost:44343/",
       "sslPort": 0
     }
   },
